fix link volta pagina

--- a/links.html
+++ b/links.html
@@ -43,7 +43,7 @@
     <iframe width="800" height="450" src="https://www.youtube.com/embed/T12ygsp9Mvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     <p>Teste da nave Starship SN10 da SpaceX!</p>
     <iframe width="800" height="450" src="https://www.youtube.com/embed/ODY6JWzS8WU?start=259" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <p><a href="/index.html">VOLTAR à página inicial!</a></p>
+    <p><a href="https://cc.uffs.edu.br/pessoa/alexsandro.meurer/index.html">VOLTAR à página inicial!</a></p>
 </body>
 
 </html>
