--- a/links.html
+++ b/links.html
@@ -2,10 +2,11 @@
 <html>
 
 <head>
+    <link rel="icon" href="favicon.ico">
     <meta charset="utf-8">
     <title>Vídeos Recomendados - Alexsandro Schneider</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
 
     <style type="text/css">
 
@@ -29,7 +30,7 @@
 
         .iframe-container{
             position: relative;
-            width: 75%;
+            width: 90%;
             padding-bottom: 56.25%; 
             height: 0;
             margin: 0 auto;
@@ -48,12 +49,15 @@
 </head>
 
 <body>
-    <!-- Isso é um comentário no código -->
     <h1>VIDEOS RECOMENDADOS!</h1>
     <p>Alguns vídeos que o Youtube permitiu incorporar &#128514 &#x1F602.</p>
     <p>DOOM Music!</p>
     <div class="iframe-container">   
         <iframe width="560" height="315" src="https://www.youtube.com/embed/T12ygsp9Mvg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </div>
+    <p>Abertura Dragon Ball Z</p>
+    <div class="iframe-container">  
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/5hcbImg97UI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
     <p>Teste da nave Starship SN10 da SpaceX!</p>
     <div class="iframe-container"> 
