--- a/index.html
+++ b/index.html
@@ -140,13 +140,10 @@
             </div>
             <div>
                 <h2>INTERESSES:</h2>
-                <p>Gosto muito de ouvir música, e meus estilos favoritos são: Rock'n'Roll, Heavy Metal, Pop, EDM, Rap.</p>
-                <p>Me interesso por filmes e séries de super heróis, drama, ficção científica, suspense, além de animes.</p>
-                <p>Sempre gostei de video-games e PCs. Meu primeiro video-game foi um Playstation 1.</p>
-                <p>Ganhei meu primeiro computador aos 10 anos de idade. PC Master Race FTW!</p>
-                <p>Joguei bastante Counter-Strike 1.6 em Lan Houses, e hoje em dia jogo o Global-Offensive, a versão mais recente do CS.</p>
-                <p>Meus jogos favoritos atualmente são: Kerbal Space Program, Minecraft, The Witcher 3, Fallout 4, PUBG...</p>
-                <p>Gosto de todas as novidades tecnológicas: geração de energia renovável, veículos elétricos,</p>
+                <p>Trabalho como auxiliar administrativo em um supermercado.</p>
+                <p>Sempre tive muito interesse sobre temas envolvidos com programação, computação em geral.</p>
+                <p>Até o incio do curso de ciência da computação sabia apenas fazer scripts em Batch.</p>
+                <p>Gosto de acompanhar noticias sobre novidades tecnológicas: geração de energia renovável, veículos elétricos,</p>
                 <p>lançamentos espaciais, interface cérebro-computador, inteligência artifical, entre outras.</p>
             </div>
             <div style="line-height: 1.5;">
@@ -156,7 +153,7 @@
                 <a href="https://twitter.com/AlexsandroMH" class="fa fa-twitter" target="_blank" title="Twitter"></a>
                 <a href="https://www.instagram.com/alexsandromh" class="fa fa-instagram" target="_blank" title="Instagram"></a>
                 <a href="https://steamcommunity.com/id/alexsandromh" class="fa fa-steam" target="_blank" title="Steam"></a>
-                <a href="https://api.whatsapp.com/send?phone=5549988520834" class="fa fa-whatsapp" target="_blank" title="Whatsapp"></a>
+                <a href="https://api.whatsapp.com/send?phone=5549988520034" class="fa fa-whatsapp" target="_blank" title="Whatsapp"></a>
             </div>  
             <div style="vertical-align:middle; text-align:center;">
                 <img src="img/thatsallfolks.png">
