nova versão do site

--- a/index.html
+++ b/index.html
@@ -1,181 +1,146 @@
-<!doctype html>
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <link rel="icon" href="favicon.ico">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta charset="utf-8">
-    <title>Alexsandro Schneider &middot; Discente em Ciência da Computação.</title>
-    <meta content=""/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <title>Alexsandro Schneider &middot; Discente de Ciência da Computação.</title>
 
-    <style type="text/css">
+  <!-- CSS  -->
+  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link rel="icon" href="favicon.ico">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 
-        body {
-            font-family: Arial, sans-serif;
-            font-size: 20px;
-            padding: 20px;
-            color: white;
-            height: 100%;
-            margin: 0;
-            background-image: url(img/spacemountain.jpg);
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-        footer {
-            text-align: center;
-        }
-        img {
-            width: 30%;
-            height: auto;
-        }
-        a {
-            color: white;
-        }
-        p {
-            text-align: center;
-        }
-        p span {
-            background-color: black;
-        }
-
-        .sidenav {
-          height: 100%;
-          width: 0;
-          position: fixed;
-          z-index: 1;
-          top: 0;
-          left: 0;
-          background-color: #111;
-          overflow-x: hidden;
-          transition: 0.5s;
-          padding-top: 60px;
-        }
-        .sidenav a {
-          padding: 8px 8px 8px 32px;
-          text-decoration: none;
-          font-size: 25px;
-          color: #818181;
-          display: block;
-          transition: 0.3s;
-        }
-        .sidenav a:hover {
-          color: #f1f1f1;
-        }
-        .sidenav .closebtn {
-          position: absolute;
-          top: 0;
-          right: 25px;
-          font-size: 36px;
-          margin-left: 50px;
-        }
-        #main {
-          transition: margin-left .5s;
-          padding: 16px;
-        }
-        @media screen and (max-height: 450px) {
-          .sidenav {padding-top: 15px;}
-          .sidenav a {font-size: 18px;}
-        }
-
-        .fa {
-            padding: 20px;
-            font-size: 30px;
-            width: 50px;
-            text-align: center;
-            text-decoration: none;
-            margin: 5px 2px;
-        }
-        .fa:hover {
-            opacity: 0.7;
-        }
-        .fa-facebook {
-            background: #3B5998;
-            color: white;
-        }
-        .fa-twitter {
-            background: #55ACEE;
-            color: white;
-        }
-        .fa-steam {
-            background: #383838;
-            color: white;
-        }
-        .fa-github {
-            background: #383838;
-            color: white;
-        }
-        .fa-instagram {
-            background: #125688;
-            color: white;
-        }
-        .fa-whatsapp {
-            background: #10af2b;
-            color: white;
-        }
-
-    </style>
 </head>
-
 <body>
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="https://cc.uffs.edu.br/pessoa/alexsandro.meurer/links.html">VIDEOS Recomendados!</a>
-    </div>
+  <div class="navbar-fixed">
+    <nav style="background-color: #343433">
+      <div class="nav-wrapper container">
+        <a class="navbar-brand" href="https://cc.uffs.edu.br/">
+          <img src="https://cc.uffs.edu.br/images/logo/CC-logo-com-background.svg" style="max-width: 100%; height: 56px" title="Ciência da Computação">
+        </a>
+        
+        <ul class="right hide-on-med-and-down">
+          <a href="https://github.com/AlexsandroSchneider">
+            <img style="height:auto; border-radius: 50%; border: 2px solid #63a89b;" alt="" width="50" height="50" src="https://avatars.githubusercontent.com/u/80014038?v=4">
+          </a>
+        </ul>
+      </div>
+    </nav>
+  </div>
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="header center black-text">ALEXSANDRO MEURER SCHNEIDER</h1>
+      <div class="row center">
+        <h5 class="header col s12 light">Discente de Ciência da Computação na UFFS Campus Chapecó.</h5>
+      </div>
+      <div class="row center">
+        <br>
+        <a href="https://cc.uffs.edu.br/" id="download-button" class="btn-large waves-effect waves-light black " target="_blank">Site do curso.</a>
+      </div>
+      <br><br>
 
-    <div id="main">
-        <span style="font-size:20px;cursor:pointer" onclick="openNav()">&#9776; Abrir Navegação</span>
-        <div style="text-align: center;">
-            <h1>Oi, eu sou o ALEXSANDRO!</h1>
-            <p>Sou discente em Ciência da Computação na UFFS Campus Chapecó.</p>
-            <div>
-                <h2>SOBRE MIM:</h2>
-                <p>Meu nome completo é Alexsandro Meurer Schneider.</p>
-                <p>Nasci na cidade de Ivoti, Rio Grande do Sul, no dia 27/09/1994.</p>
-                <p>Vivi até os 10 anos de idade em Estância Velha, cidade vizinha a Ivoti.</p>
-                <p>Me mudei em 2004 para a cidade de Maravilha, Santa Catarina, onde resido até hoje.</p>
-                <p>Concluí o ensino médio no ano de 2011.</p>
-                <p>Em 2019 fiz o ENEM, passei no processo seletivo do SISU e obtive a vaga no curso de ciência da computação.</p>
-            </div>
-            <div>
-                <h2>INTERESSES:</h2>
-                <p>Trabalho como auxiliar administrativo em um supermercado.</p>
-                <p>Sempre tive muito interesse sobre temas envolvidos com programação, computação em geral.</p>
-                <p>Até o incio do curso de ciência da computação sabia apenas fazer scripts em Batch.</p>
-                <p>Gosto de acompanhar noticias sobre novidades tecnológicas: geração de energia renovável, veículos elétricos,</p>
-                <p>lançamentos espaciais, interface cérebro-computador, inteligência artifical, entre outras.</p>
-            </div>
-            <div style="line-height: 1.5;">
-                <h1>Minhas redes sociais:</h1>
-                <a href="https://github.com/AlexsandroSchneider" class="fa fa-github" target="_blank" title="GitHub"></a>
-                <a href="https://www.facebook.com/AlexsandroSchneiderMH" class="fa fa-facebook" target="_blank" title="Facebook"></a>
-                <a href="https://twitter.com/AlexsandroMH" class="fa fa-twitter" target="_blank" title="Twitter"></a>
-                <a href="https://www.instagram.com/alexsandromh" class="fa fa-instagram" target="_blank" title="Instagram"></a>
-                <a href="https://steamcommunity.com/id/alexsandromh" class="fa fa-steam" target="_blank" title="Steam"></a>
-                <a href="https://api.whatsapp.com/send?phone=5549988520034" class="fa fa-whatsapp" target="_blank" title="Whatsapp"></a>
-            </div>  
-            <div style="vertical-align:middle; text-align:center;">
-                <img src="img/thatsallfolks.png">
-            </div>  
+    </div>
+  </div>
+
+
+  <div class="container" id="redes">
+    <h1 class="header center black-text">Minhas redes sociais.</h1>
+    <div class="section">
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><a href="https://github.com/AlexsandroSchneider" class="fa fa-github" target="_blank" title="GitHub"></a></h2>
+            <h5 class="center">GitHub</h5>
+            <p class="center">Meu repositório de códigos. Aqui você encontrará projetos em que estou trabalhando atualmente..</p>
+          </div>
         </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><a href="https://www.facebook.com/AlexsandroSchneiderMH" class="fa fa-facebook" target="_blank" title="Facebook"></a></h2>
+            <h5 class="center">Facebook</h5>
+            <p class="center">Fotos e histórias pelas quais me interesso são compartilhadas aqui.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><a href="https://twitter.com/AlexsandroMH" class="fa fa-twitter" target="_blank" title="Twitter"></a></h2>
+            <h5 class="center">Twitter</h5>
+            <p class="center">Para acompanhar histórias em tempo real e ficar por dentro de tudo o que está acontecendo pelo mundo.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><a href="https://steamcommunity.com/id/alexsandromh" class="fa fa-steam" target="_blank" title="Steam"></a></h2>
+            <h5 class="center">Steam</h5>
+            <p class="center">Me chame para um jogo, casual ou competitivo.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center"><a href="https://api.whatsapp.com/send?phone=5549988520034" class="fa fa-whatsapp" target="_blank" title="Whatsapp"></a></h2>
+            <h5 class="center">Whatsapp</h5>
+            <p class="center">Entre em contato diretamente comigo.</p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><a href="https://www.instagram.com/alexsandromh" class="fa fa-instagram" target="_blank" title="Instagram"></a></h2>
+            <h5 class="center">Instagram</h5>
+            <p class="center">Compartilhando momentos interessantes.</p>
+          </div>
+        </div>
+      </div>
+
     </div>
+    <br><br>
+  </div>
 
-    <script>
-    function openNav() {
-        document.getElementById("mySidenav").style.width = "250px";
-        document.getElementById("main").style.marginLeft = "250px";
-    }
-      
-    function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
-        document.getElementById("main").style.marginLeft= "0";
-    }
-    </script>
-</body>
+  <footer class="page-footer black">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">SOBRE MIM</h5>
+          <p class="grey-text text-lighten-4">Atualmente trabalho como auxiliar administrativo em um supermercado, porém sempre tive paixão 
+            sobre assuntos relacionados à tecnlogia. Estou cursando Ciência da computação na UFFS Campus Chapecó, e pretendo desenvolver 
+            habilidades nas mais diversas soluções tecnológicas para capacitar-me ao mercado de trabalho de TI.
 
-<footer>
-    Photo by <a href="https://unsplash.com/@eberhardgross?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">eberhard grossgasteiger</a> on <a href="https://unsplash.com/s/photos/dark-space?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-</footer>
+          </p>
 
+
+        </div>
+        <div class="col l3 s12">
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Contato</h5>
+          <ul>
+            <li><i class="fa fa-envelope"><a href="mailto:alexsandromh@gmail.com"></i>alexsandromh@gmail.com</li></a>
+            <li><i class="fa fa-envelope"><a href="mailto:alexsandromh@hotmail.com"></i>alexsandromh@hotmail.com</li></a>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        <a class="orange-text text-lighten-3"></a>Feito por Alexsandro Schneider</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
