fix min-width, reorganiza links

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Alexsandro Schneider &middot; Discente de Ciência da Computação.</title>
-
   <!-- CSS  -->
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
@@ -13,114 +12,116 @@
 
 </head>
 <body>
-  <div class="navbar-fixed">
-    <nav style="background-color: #343433">
-      <div class="nav-wrapper container">
-        <a class="navbar-brand" href="https://cc.uffs.edu.br/">
-          <img src="https://cc.uffs.edu.br/images/logo/CC-logo-com-background.svg" style="max-width: 100%; height: 56px" title="Ciência da Computação">
-        </a>
-        
-        <ul class="right hide-on-med-and-down">
-          <a href="https://github.com/AlexsandroSchneider">
-            <img style="height:auto; border-radius: 50%; border: 2px solid #63a89b;" alt="" width="50" height="50" src="https://avatars.githubusercontent.com/u/80014038?v=4">
+  <header>
+    <div class="navbar-fixed">
+      <nav style="background-color: #343433">
+        <div class="nav-wrapper container">
+          <a class="navbar-brand" href="https://cc.uffs.edu.br/">
+            <img src="https://cc.uffs.edu.br/images/logo/CC-logo-com-background.svg" style="max-width: 100%; height: 56px" title="Ciência da Computação">
           </a>
-        </ul>
-      </div>
-    </nav>
-  </div>
-  <div class="section no-pad-bot" id="index-banner">
-    <div class="container">
-      <br><br>
-      <h1 class="header center black-text">ALEXSANDRO MEURER SCHNEIDER</h1>
-      <div class="row center">
-        <h5 class="header col s12 light">Discente de Ciência da Computação na UFFS Campus Chapecó.</h5>
-      </div>
-      <div class="row center">
-        <br>
-        <a href="https://cc.uffs.edu.br/" id="download-button" class="btn-large waves-effect waves-light black " target="_blank">Site do curso.</a>
-      </div>
-      <br><br>
 
+          <ul class="right hide-on-med-and-down">
+            <a href="https://github.com/AlexsandroSchneider">
+              <img style="height:auto; border-radius: 50%; border: 2px solid #63a89b;" width="50" height="50" src="https://avatars.githubusercontent.com/u/80014038?v=4" title="GitHub">
+            </a>
+          </ul>
+        </div>
+      </nav>
     </div>
-  </div>
 
-
-  <div class="container" id="redes">
-    <h1 class="header center black-text">Minhas redes sociais.</h1>
-    <div class="section">
-      <!--   Icon Section   -->
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center"><a href="https://github.com/AlexsandroSchneider" class="fa fa-github" target="_blank" title="GitHub"></a></h2>
-            <h5 class="center">GitHub</h5>
-            <p class="center">Meu repositório de códigos. Aqui você encontrará projetos em que estou trabalhando atualmente..</p>
-          </div>
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <br><br>
+        <h1 class="header center black-text">ALEXSANDRO MEURER SCHNEIDER</h1>
+        <div class="row center">
+          <h5 class="header col s12">Discente de Ciência da Computação na UFFS Campus Chapecó.</h5>
         </div>
 
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center"><a href="https://www.facebook.com/AlexsandroSchneiderMH" class="fa fa-facebook" target="_blank" title="Facebook"></a></h2>
-            <h5 class="center">Facebook</h5>
-            <p class="center">Fotos e histórias pelas quais me interesso são compartilhadas aqui.</p>
-          </div>
+        <div class="row center">
+          <br>
+          <a href="https://cc.uffs.edu.br/" id="download-button" class="btn-large waves-effect waves-light black " target="_blank">Site do curso.</a>
         </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center"><a href="https://twitter.com/AlexsandroMH" class="fa fa-twitter" target="_blank" title="Twitter"></a></h2>
-            <h5 class="center">Twitter</h5>
-            <p class="center">Para acompanhar histórias em tempo real e ficar por dentro de tudo o que está acontecendo pelo mundo.</p>
-          </div>
-        </div>
+        <br><br>
       </div>
-
-      <div class="row">
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center"><a href="https://steamcommunity.com/id/alexsandromh" class="fa fa-steam" target="_blank" title="Steam"></a></h2>
-            <h5 class="center">Steam</h5>
-            <p class="center">Me chame para um jogo, casual ou competitivo.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center"><a href="https://api.whatsapp.com/send?phone=5549988520034" class="fa fa-whatsapp" target="_blank" title="Whatsapp"></a></h2>
-            <h5 class="center">Whatsapp</h5>
-            <p class="center">Entre em contato diretamente comigo.</p>
-          </div>
-        </div>
-
-        <div class="col s12 m4">
-          <div class="icon-block">
-            <h2 class="center light-blue-text"><a href="https://www.instagram.com/alexsandromh" class="fa fa-instagram" target="_blank" title="Instagram"></a></h2>
-            <h5 class="center">Instagram</h5>
-            <p class="center">Compartilhando momentos interessantes.</p>
-          </div>
-        </div>
-      </div>
-
     </div>
-    <br><br>
-  </div>
+  </header>
 
-  <footer class="page-footer black">
+  <main>
+    <div class="container" id="redes">
+      <h1 class="header center black-text">Minhas redes sociais.</h1>
+      <div class="section">
+
+        <!--   Icon Section   -->
+
+        <div class="row">
+          <div class="col s12 m4 left">
+            <div class="icon-block">
+              <h2 class="center"><a href="https://github.com/AlexsandroSchneider" class="fa fa-github" target="_blank" title="GitHub"></a></h2>
+              <h5 class="center">GitHub</h5>
+              <p class="center">Meu repositório de códigos. Aqui você encontrará projetos em que estou trabalhando atualmente..</p>
+            </div>
+          </div>
+
+          <div class="col s12 m4 center">
+            <div class="icon-block">
+              <h2 class="center"><a href="https://api.whatsapp.com/send?phone=5549988520034" class="fa fa-whatsapp" target="_blank" title="Whatsapp"></a></h2>
+              <h5 class="center">Whatsapp</h5>
+              <p class="center">Entre em contato diretamente comigo.</p>
+            </div>
+          </div>
+
+          <div class="col s12 m4 right">
+            <div class="icon-block">
+              <h2 class="center"><a href="https://steamcommunity.com/id/alexsandromh" class="fa fa-steam" target="_blank" title="Steam"></a></h2>
+              <h5 class="center">Steam</h5>
+              <p class="center">Me chame para um jogo, casual ou competitivo.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12 m4 left">
+            <div class="icon-block">
+              <h2 class="center"><a href="https://www.facebook.com/AlexsandroSchneiderMH" class="fa fa-facebook" target="_blank" title="Facebook"></a></h2>
+              <h5 class="center">Facebook</h5>
+              <p class="center">Fotos e histórias pelas quais me interesso são compartilhadas aqui.</p>
+            </div>
+          </div>
+
+          <div class="col s12 m4 center">
+            <div class="icon-block">
+              <h2 class="center light-blue-text"><a href="https://www.instagram.com/alexsandromh" class="fa fa-instagram" target="_blank" title="Instagram"></a></h2>
+              <h5 class="center">Instagram</h5>
+              <p class="center">Compartilhando momentos interessantes.</p>
+            </div>
+          </div>
+        
+          <div class="col s12 m4 right">
+            <div class="icon-block">
+              <h2 class="center"><a href="https://twitter.com/AlexsandroMH" class="fa fa-twitter" target="_blank" title="Twitter"></a></h2>
+              <h5 class="center">Twitter</h5>
+              <p class="center">Para acompanhar histórias em tempo real e ficar por dentro de tudo o que está acontecendo pelo mundo.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br><br>
+    </div>
+  </main>
+
+  <footer class="page-footer" style="background-color: #343433;">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col l8 s12 left">
           <h5 class="white-text">SOBRE MIM</h5>
           <p class="grey-text text-lighten-4">Atualmente trabalho como auxiliar administrativo em um supermercado, porém sempre tive paixão 
             sobre assuntos relacionados à tecnlogia. Estou cursando Ciência da computação na UFFS Campus Chapecó, e pretendo desenvolver 
             habilidades nas mais diversas soluções tecnológicas para capacitar-me ao mercado de trabalho de TI.
-
           </p>
-
-
         </div>
-        <div class="col l3 s12">
+        <div class="col l4 s12">
         </div>
-        <div class="col l3 s12">
+        <div class="col l4 s12 right">
           <h5 class="white-text">Contato</h5>
           <ul>
             <li><i class="fa fa-envelope"><a href="mailto:alexsandromh@gmail.com"></i>alexsandromh@gmail.com</li></a>
@@ -129,18 +130,18 @@
         </div>
       </div>
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright black">
       <div class="container">
         <a class="orange-text text-lighten-3"></a>Feito por Alexsandro Schneider</a>
       </div>
     </div>
   </footer>
 
-
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
   <script src="js/materialize.js"></script>
   <script src="js/init.js"></script>
 
-  </body>
+</body>
+
 </html>
