add infos sobre mim

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>Alexsandro Schneider &middot; Discente de Ciência da Computação.</title>
   <!-- CSS  -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link rel="icon" href="favicon.ico">
@@ -58,7 +59,7 @@
             <div class="icon-block">
               <h2 class="center"><a href="https://github.com/AlexsandroSchneider" class="fa fa-github" target="_blank" title="GitHub"></a></h2>
               <h5 class="center">GitHub</h5>
-              <p class="center">Meu repositório de códigos. Aqui você encontrará projetos em que estou trabalhando atualmente..</p>
+              <p class="center">Meu repositório de códigos e projetos.</p>
             </div>
           </div>
 
@@ -74,7 +75,7 @@
             <div class="icon-block">
               <h2 class="center"><a href="https://steamcommunity.com/id/alexsandromh" class="fa fa-steam" target="_blank" title="Steam"></a></h2>
               <h5 class="center">Steam</h5>
-              <p class="center">Me chame para um jogo, casual ou competitivo.</p>
+              <p class="center">Jogos casuais ou competitivos.</p>
             </div>
           </div>
         </div>
@@ -84,7 +85,7 @@
             <div class="icon-block">
               <h2 class="center"><a href="https://www.facebook.com/AlexsandroSchneiderMH" class="fa fa-facebook" target="_blank" title="Facebook"></a></h2>
               <h5 class="center">Facebook</h5>
-              <p class="center">Fotos e histórias pelas quais me interesso são compartilhadas aqui.</p>
+              <p class="center">Fotos e postagens pelas quais me interesso.</p>
             </div>
           </div>
 
@@ -92,7 +93,7 @@
             <div class="icon-block">
               <h2 class="center light-blue-text"><a href="https://www.instagram.com/alexsandromh" class="fa fa-instagram" target="_blank" title="Instagram"></a></h2>
               <h5 class="center">Instagram</h5>
-              <p class="center">Compartilhando momentos interessantes.</p>
+              <p class="center">Alguns momentos que merecem ser compartilhados.</p>
             </div>
           </div>
         
@@ -100,29 +101,58 @@
             <div class="icon-block">
               <h2 class="center"><a href="https://twitter.com/AlexsandroMH" class="fa fa-twitter" target="_blank" title="Twitter"></a></h2>
               <h5 class="center">Twitter</h5>
-              <p class="center">Para acompanhar histórias em tempo real e ficar por dentro de tudo o que está acontecendo pelo mundo.</p>
+              <p class="center">Histórias em tempo real e tudo sobre o que está acontecendo pelo mundo.</p>
             </div>
           </div>
         </div>
       </div>
       <br><br>
     </div>
+
+    <div class="row">
+      <div class="col s12 m8 offset-m2">
+        <ul class="collapsible">
+          <li>
+            <div class="collapsible-header white-text grey darken-4"><i class="material-icons">person_pin</i>SOBRE</div>
+            <div class="collapsible-body white-text blue-grey darken-4"><span>Meu nome é Alexsandro Meurer Schneider. Tenho 26 anos de idade.
+              <br>Sou natural de Ivoti, Rio Grande do Sul. Atualmente resido em Maravilha, Santa Catarina.
+              <br>Trabalho como auxiliar administrativo em um supermercado.
+              <br>Concluí o Ensino Médio em 2011. Em 2019 fiz o ENEM e participei do processo seletivo do SISU.
+              <br>Estou cursando Ciência da Computação na Universidade Federal da Fronteira Sul - Campus Chapecó.
+            </span></div>
+          </li>
+          <li>
+            <div class="collapsible-header white-text grey darken-3"><i class="material-icons">sports_esports</i>HOBBIES</div>
+            <div class="collapsible-body white-text blue-grey darken-3"><span>Em meu tempo livre gosto de assistir séries, filmes, animes e alguns videos no youtube.
+              <br>Também gosto de jogar videogames, principalmente no PC.
+              <br>Prefiro jogos de FPS (tiro em primeira pessoa), porém também jogo RPGs, mundo aberto, etc.
+              <br>Sou corredor casual e gosto de ouvir música durante minhas corridas.
+              <br>Tenho um gosto bem eclético: curto Rock, Metal, EDM, Pop, Reggae e outros.
+              <br>Meu hobby mais recente são os aviões RC. Quando encontro um campo aberto, passo horas voando meu avião. 
+            </span></div>
+          </li>
+          <li>
+            <div class="collapsible-header white-text grey darken-2"><i class="material-icons">whatshot</i>PROJETOS</div>
+            <div class="collapsible-body white-text blue-grey darken-2"><span>EM BREVE.</span></div>
+          </li>
+        </ul>
+      </div>
+    </div>
+
   </main>
 
   <footer class="page-footer" style="background-color: #343433;">
     <div class="container">
       <div class="row">
         <div class="col l8 s12 left">
-          <h5 class="white-text">SOBRE MIM</h5>
-          <p class="grey-text text-lighten-4">Atualmente trabalho como auxiliar administrativo em um supermercado, porém sempre tive paixão 
-            sobre assuntos relacionados à tecnlogia. Estou cursando Ciência da computação na UFFS Campus Chapecó, e pretendo desenvolver 
-            habilidades nas mais diversas soluções tecnológicas para capacitar-me ao mercado de trabalho de TI.
+          <h5 class="white-text">CONTATO</h5>
+          <p class="grey-text text-lighten-4">Basta acessar alguma de minhas redes sociais e me mandar uma mensagem privada.
+            <br>Também disponibilizei dois endereços de email que podem ser utilizados para contato.
           </p>
         </div>
         <div class="col l4 s12">
         </div>
         <div class="col l4 s12 right">
-          <h5 class="white-text">Contato</h5>
           <ul>
             <li><i class="fa fa-envelope"><a href="mailto:alexsandromh@gmail.com"></i>alexsandromh@gmail.com</li></a>
             <li><i class="fa fa-envelope"><a href="mailto:alexsandromh@hotmail.com"></i>alexsandromh@hotmail.com</li></a>
@@ -132,7 +162,7 @@
     </div>
     <div class="footer-copyright black">
       <div class="container">
-        <a class="orange-text text-lighten-3"></a>Feito por Alexsandro Schneider</a>
+        <a class="white-text"></a>Feito por Alexsandro Schneider</a>
       </div>
     </div>
   </footer>
